Adicionado paginação na lista de gerencia de posts

--- a/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Post/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<Blog_Escola.ViewModels.PostVM>
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
+@model IPagedList<Blog_Escola.ViewModels.PostVM>
 @{
     ViewData["Title"] = "Index Post";
 }
@@ -31,7 +34,7 @@
                                 <h4 class="text-dark fw-bold">@post.Title</h4>
                             </div>
                             <div class="row">
-                                <h5 class="text-dark fw-bold">@post.ShortDescription</h5>
+                                <h5 class="text-dark fw-bold ">@post.ShortDescription</h5>
                             </div>
                             <div class="row">
                                 <p>Autor : @post.AuthorName / Criado: @post.CreatedAt</p>
@@ -47,24 +50,24 @@
                                     <a class="btn btn-outline-dark" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-upload"></i></a>
                                     <a asp-action="Edit" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id" class="btn btn-outline-dark "><i class="fa fa-edit"></i></a>
                                     <a class="btn btn-danger" data-bs-toggle="modal" asp-action="Delete" asp-controller="Post" asp-area="Admin" asp-route-id="@post.Id"><i class="fa fa-trash"></i></a>
-                                    
-
-                                    
                                 </p>
-
                             </div>
                         </div>
                     </div>
                 </div>
             }
-            
-
         </div>
-
-
+        <div class="card-footer bg-gradient-secondary text-dark">
+            Página @(Model?.PageCount < Model?.PageNumber ? 0 : Model?.PageNumber) de @Model?.PageCount
+            @Html.PagedListPager(Model,page => Url.Action("Index",
+            new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }),
+            new PagedListRenderOptions()
+            {
+            ContainerDivClasses = new List<string> {"d-flex justify-content-end text-dark "},
+            UlElementClasses = new List<string> {"pagination text-dark"},
+            LiElementClasses = new List<string> {"btn btn-light font-weight-bolder text-dark m-1"},
+            ActiveLiElementClass =  "active",
+            })
+        </div>
     </div>
-
-
-
 </div>
-<!-- /.container-fluid -->
