Blog finalizado em sua base

--- a/Blog_Escola/Views/Home/Index.cshtml
+++ b/Blog_Escola/Views/Home/Index.cshtml
@@ -58,9 +58,9 @@
                 new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }),
                 new PagedListRenderOptions()
                 {
-                ContainerDivClasses = new List<string> {"d-flex justify-content-end mt-2 mb-4"},
+                ContainerDivClasses = new List<string> {"d-flex justify-content-end mt-2 mb-2"},
                 UlElementClasses = new List<string> {"pagination"},
-                LiElementClasses = new List<string> {"btn btn-primary font-weight-bolder"},
+                LiElementClasses = new List<string> {"btn btn-primary font-weight-bolder m-1"},
                 ActiveLiElementClass =  "active",
                 })
                 
