--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <hr class="sidebar-divider d-none d-md-block">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                        aria-expanded="true" aria-controls="collapseUtilities">
                         <i class="fas fa-fw fa-file"></i>
